Add additional env vars

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,10 @@ REMOTE_USER=johndoe
 REMOTE_SSH_PRIVATE_KEY=/home/johndoe/.ssh/id_rsa
 
 REMOTE_DB_USER=root
-REMOTE_DB_PASSWORD=rAndoMkeY
 REMOTE_DB_DATABASE=databasename
+
+REMOTE_WP_URL=http://www.example.com
+REMOTE_WP_DIR=/var/www/example.com
+
+LOCAL_WP_URL=http://example.local
+LOCAL_WP_DIR=/path/to/local/wordpress
