Add import local DB statements

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@ REMOTE_HOST=0.0.0.0
 REMOTE_SSH_PORT=22
 REMOTE_USER=johndoe
 REMOTE_SSH_PRIVATE_KEY=/home/johndoe/.ssh/id_rsa
-
 REMOTE_DB_USER=root
 REMOTE_DB_DATABASE=databasename
-
 REMOTE_WP_URL=http://www.example.com
 REMOTE_WP_DIR=/var/www/example.com
 
+LOCAL_DB_USER=root
+LOCAL_DB_DATABASE=deurali_local
 LOCAL_WP_URL=http://example.local
 LOCAL_WP_DIR=/path/to/local/wordpress
